--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,21 +4,20 @@ version '1.0'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:8.2.2'
     }
-
 }
 
 rootProject.allprojects {
     repositories {
-        flatDir {
-           dirs project(':flutter_tesseract_ocr').file('libs')
-        }
-        
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -27,27 +26,27 @@ apply plugin: 'com.android.library'
 android {
     namespace "io.paratoner.flutter_tesseract_ocr"
     compileSdkVersion 34
-    
-     
+
     defaultConfig {
         minSdkVersion 21
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        consumerProguardFiles "consumer-rules.pro"
     }
-    lintOptions {
+
+    buildFeatures {
+        buildConfig = true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    lint {
         disable 'InvalidPackage'
     }
-    // packagingOptions{
-    //     doNotStrip '*/mips/*.so'
-    //     doNotStrip '*/mips64/*.so'
-    // }
 }
-// repositories {
-//     flatDir {
-//         dirs 'libs'
-//         dirs project(':flutter_tesseract_ocr').file('libs')
-//     }
-// }
+
 dependencies {
-    api(name: 'tesseract4android-release', ext: 'aar')
+    implementation 'cz.adaptech.tesseract4android:tesseract4android:4.9.0'
 }
