--- a/android/.project
+++ b/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>flutter_tesseract_ocr</name>
+	<name>flutter_tesseract_ocr-android</name>
 	<comment>Project android_ created by Buildship.</comment>
 	<projects>
 	</projects>
