--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=--init-script /var/folders/d7/r3nd1ghd1pvcbsr9kzfps20c0000gn/T/db3b08f
 auto.sync=true
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=
+connection.project.dir=../example/android
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
